--- a/frobot/frobot.csproj
+++ b/frobot/frobot.csproj
@@ -5,4 +5,20 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Disqord" Version="1.0.0" />
+    <PackageReference Include="Disqord.Bot" Version="1.0.0" />
+    <PackageReference Include="Disqord.Core" Version="1.0.0" />
+    <PackageReference Include="Disqord.Interactivity" Version="1.0.0" />
+    <PackageReference Include="Disqord.Rest" Version="1.0.0" />
+    <PackageReference Include="Disqord.Serialization.Json.Newtonsoft" Version="1.0.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.3.1" />
+    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.0.1" />
+    <PackageReference Include="Reddit" Version="1.2.0" />
+  </ItemGroup>
+
 </Project>
