--- a/frobot/frobot.csproj
+++ b/frobot/frobot.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Reddit" Version="1.2.0" />
+    <PackageReference Include="SteamWebAPI2" Version="4.0.14" />
   </ItemGroup>
 
   <ItemGroup>
