--- a/contracker/contracker.csproj
+++ b/contracker/contracker.csproj
@@ -14,15 +14,11 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="Reddit" Version="1.2.0" />
-    <PackageReference Include="SteamWebAPI2" Version="4.0.14" />
+    <PackageReference Include="SteamKit2" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
     <None Update="config.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="config2.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
