--- a/contracker/contracker.csproj
+++ b/contracker/contracker.csproj
@@ -23,4 +23,14 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="ContrackerAPI, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>D:\source\repos\ContrackerAPI\ContrackerAPI\bin\Debug\netcoreapp3.0\ContrackerAPI.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="resources" />
+  </ItemGroup>
+
 </Project>
