--- a/contracker/contracker.csproj
+++ b/contracker/contracker.csproj
@@ -32,6 +32,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Resources\Fonts" />
     <Folder Include="Resources\Images" />
   </ItemGroup>
 
