image overlay code is kinda done, does not work... qmmands dont work either

--- a/contracker/contracker.csproj
+++ b/contracker/contracker.csproj
@@ -22,6 +22,9 @@
     <None Update="config.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Resources\Images\contracker.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
