--- a/ImageSandbox/ImageSandbox.csproj
+++ b/ImageSandbox/ImageSandbox.csproj
@@ -14,6 +14,9 @@
       <None Update="whatthefuck.jpg">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+      <None Update="whatthefuck.jpg">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
