changed solution structure hope u dont mind

--- a/contracker/contracker.csproj
+++ b/contracker/contracker.csproj
@@ -28,18 +28,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="ContrackerAPI, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>D:\source\repos\ContrackerAPI\ContrackerAPI\bin\Debug\netcoreapp3.0\ContrackerAPI.dll</HintPath>
-      <HintPath>C:\Users\jolly\RiderProjects\contracker.NET\ContrackerAPI\bin\Debug\netcoreapp3.0\ContrackerAPI.dll</HintPath>
-    </Reference>
-  </ItemGroup>
-
-  <ItemGroup>
     <Folder Include="Resources\Fonts" />
     <Folder Include="Resources\Images" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\contracker.NET\ContrackerAPI\ContrackerAPI.csproj" />
     <ProjectReference Include="..\ImageSandbox\ImageSandbox.csproj" />
   </ItemGroup>
 
